Update database implementation